--- a/src/html/register.html
+++ b/src/html/register.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="../css/base.css" />
         <link rel="stylesheet" type="text/css" href="../css/register.css" />
+        <script type="text/javascript" src="../js/register.js"></script>
     </head>
     <body>
         <div id="header_register">
@@ -22,7 +23,7 @@
                 <div class="reg_left fl">
                     <h4>手机注册</h4>
                     <form action="#" id="register_box">
-                        <label for="#tel">手机号：<input type="text" id="tel" placeholder="请输入手机号码" /></label>
+                        <label for="#tel">手机号：<input type="text" id="tel" placeholder="请输入手机号码" /></label><i class="output"></i>
                         <label for="#code_reg" style='border-top:none;width:250px'>验证码：<input type="text" id="#code_reg" placeholder="请输入验证码" style='width:100px'/></label><span></span>
                         <div class="agree">
                             <input type="checkbox" id="reg_agree" />阅读并同意<a href="#">《服务协议》</a>
