--- a/src/html/sign.html
+++ b/src/html/sign.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="../css/base.css" />
         <link rel="stylesheet" type="text/css" href="../css/sign.css" />
+        <script type="text/javascript" src="../js/require.js" data-main="../js/sign"></script>
     </head>
     <body>
         <div id="header_sign">
