--- a/src/html/goodsList.html
+++ b/src/html/goodsList.html
@@ -10,8 +10,8 @@
           <div id="header_goods"></div>
           <div id="main">
             <div class="container clearfix">
-                <div class="goodsList">
-                    <ul class="list">
+                <div class="goodsList clearfix">
+                    <ul class="list clearfix">
                     </ul>
                     <div class="goods_page">
                     </div>
